Fixed z-index of single--init-card and single--init-card-button.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1223,7 +1223,7 @@ section {
   background-size: 100%;
   background-position: center center;
   background-repeat: no-repeat;
-  z-index: 12;
+  z-index: 16;
 }
 
 .cards-single.cta .cards-single--init-card button {
@@ -1240,6 +1240,7 @@ section {
   background-color: #48a9c5;
   border-radius: 6px;
   opacity: 0;
+  z-index: 45;
 }
 
 .cards-single.cta .cards-single--init-card.disable {
@@ -1314,62 +1315,62 @@ section {
 .main-page-card--question.one,
 .main-page-card--results.one {
   display: block;
-  z-index: 11;
+  z-index: 15;
   opacity: 1;
 }
 
 .main-page-card--question.two,
 .main-page-card--results.two {
   display: block;
-  z-index: 10;
+  z-index: 14;
 }
 
 .main-page-card--question.three,
 .main-page-card--results.three {
   display: block;
-  z-index: 9;
+  z-index: 13;
 }
 
 .main-page-card--question.four,
 .main-page-card--results.four {
   display: block;
-  z-index: 8;
+  z-index: 12;
 }
 
 .main-page-card--question.five,
 .main-page-card--results.five {
   display: block;
-  z-index: 7;
+  z-index: 11;
 }
 
 .main-page-card--question.six,
 .main-page-card--results.six {
   display: block;
-  z-index: 6;
+  z-index: 10;
 }
 
 .main-page-card--question.seven,
 .main-page-card--results.seven {
   display: block;
-  z-index: 5;
+  z-index: 9;
 }
 
 .main-page-card--question.eight,
 .main-page-card--results.eight {
   display: block;
-  z-index: 4;
+  z-index: 8;
 }
 
 .main-page-card--question.nine,
 .main-page-card--results.nine {
   display: block;
-  z-index: 3;
+  z-index: 7;
 }
 
 .main-page-card--question.ten,
 .main-page-card--results.ten {
   display: block;
-  z-index: 2;
+  z-index: 6;
 }
 
 .results-share-fb {
@@ -1524,7 +1525,7 @@ section {
 }
 
 .main-page-card--results {
-  z-index: 1;
+  z-index: 5;
 }
 
 .main-page-card--results p {
@@ -1671,20 +1672,20 @@ svg path {
 
 @keyframes fallsway {
   0% {
-    left: 70%;
+    left: 87%;
     opacity: 1.0;
   }
   25% {
-    left: 80%;
+    left: 63%;
   }
   50% {
-    left: 64%;
+    left: 69%;
   }
   75% {
-    left: 75%;
+    left: 7%;
   }
   100% {
-    left: 32%;
+    left: 39%;
   }
 }
 
