--- a/assets/src/scss/components/_cards.scss
+++ b/assets/src/scss/components/_cards.scss
@@ -105,7 +105,7 @@
         background-size: 100%;
         background-position: center center;
         background-repeat: no-repeat;
-        z-index: 12;
+        z-index: 16;
 
         button {
           position: absolute;
@@ -121,6 +121,7 @@
           background-color: $flightbgblue;
           border-radius: 6px;
           opacity: 0;
+          z-index: 45;
         }
 
         &.disable {
